# website

./: .env  pyproject.toml
account/: admin.py  models.py  urls.py
cabinet/: admin.py  models.py  serializer.py  urls.py  views.py
cabinet/migrations/: 0002_usercabinet_slug.py  0003_alter_usercabinet_author_and_more.py  0004_alter_usercabinet_slug.py  0005_alter_usercabinet_author.py
config/: settings.py  urls.py
playlist/: admin.py  models.py  serializer.py  urls.py  views.py
review/: admin.py  models.py  permissions.py  serilizer.py  urls.py  views.py
review/migrations/: 0001_initial.py  0002_comment_song.py
songs/: models.py  serializers.py  urls.py  views.py
songs/migrations/: 0006_alter_songmodel_genre.py  0007_alter_songmodel_author.py  0008_songgenre_slug_songmodel_slug.py  0009_alter_songgenre_slug.py  0010_alter_songgenre_slug_alter_songmodel_slug.py  0011_songmodel_author_nickname.py  0012_alter_songmodel_song_name.py
